Add boarding and services to bookings; fix frontend communication and update price calculation